initial pwa config

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="#4F46E5" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue Currency Converter</title>
+    <meta name="description" content="Currency converter built with Vue 3, consuming NBP API" />
   </head>
   <body>
     <div id="app"></div>
