--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#4F46E5" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Vue Currency Converter</title>
     <meta name="description" content="Currency converter built with Vue 3, consuming NBP API" />
   </head>
